# Portfolio-Trade-Execution-Engine-Kalpi

./: .dockerignore  .env.example  .gitignore  ASSIGNMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/add-broker/: SKILL.md
.claude/skills/add-broker/templates/: __init__.py.template  adapter_api_key_only.py.template  adapter_credentials_form.py.template  adapter_oauth_redirect.py.template  mapping.py.template
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: auth-step.tsx  broker-picker.tsx  execute-step.tsx  history-screen.tsx  results-step.tsx
frontend/src/hooks/: use-sessions.ts
frontend/src/lib/: api.ts
src/: config.py  main.py
src/adapters/: __init__.py  base.py  errors.py  registry.py
src/adapters/angelone/: __init__.py  adapter.py  mapping.py
src/adapters/fyers/: __init__.py  adapter.py  mapping.py
src/adapters/groww/: __init__.py  adapter.py  mapping.py
src/adapters/paytm/: __init__.py  adapter.py  mapping.py
src/adapters/upstox/: __init__.py  adapter.py  mapping.py
src/adapters/zerodha/: __init__.py  adapter.py  mapping.py
src/api/: auth_routes.py  deps.py  meta_routes.py  portfolio_routes.py
src/schemas/: __init__.py  holdings.py  orders.py  portfolio.py  session.py
src/services/: __init__.py  auth_service.py  execution_service.py  notification_service.py
src/storage/: __init__.py  event_store.py  session_store.py
src/utils/: logging.py  retry.py
tests/: conftest.py  test_adapters_smoke.py  test_error_classification.py  test_execution_service.py  test_health.py  test_notification_service.py  test_registry.py  test_retry.py  test_routes_flow.py  test_schemas.py  test_session_store.py  test_zerodha_amo.py
