[project]
name = "kalpi-builder-execution-engine"
version = "0.1.0"
description = "Portfolio Trade Execution Engine — Kalpi Builder Assignment"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "Vedant Agarwal", email = "agarwalvedant42@gmail.com" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "cryptography>=43.0.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "python-multipart>=0.0.12",
    "kiteconnect>=5.0.1",
    "upstox-python-sdk>=2.15.0",
    "smartapi-python>=1.5.5",
    "logzero>=1.7.0",  # undeclared transitive dep of smartapi-python
    "fyers-apiv3>=3.1.7",
    "growwapi>=0.1.0",
    "pyotp>=2.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false
# Broker SDKs pin different transitive versions (fyers pins requests==2.31.0
# and aiohttp==3.9.3; groww wants newer). We override to a single coherent
# version set — in practice every SDK works on these, the pins in
# fyers-apiv3 are overly tight.
override-dependencies = [
    "requests>=2.32.3",
    "aiohttp>=3.11.18",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
    # Line length: soft limit. We don't want ruff check to fail on a few
    # long SQL strings / URLs. Use `make fmt` (ruff format) to re-flow.
    "E501",
    # FastAPI's dependency injection requires `Depends(...)` in argument
    # defaults — this is the documented, intended pattern. B008 is a
    # general-purpose mutable-default warning that doesn't distinguish
    # `Depends` from `list()`. The alternative (`Annotated[T, Depends(...)]`)
    # produces identical runtime behavior with more boilerplate.
    "B008",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
